src/scss/components/_screen.scss
@use '../abstracts/colors' as *;

.screen-container {
  position: relative;
  width: 80%;
  padding-top: 80%;
  margin: 0 auto;
  background-color: $canvas-background;
}

.screen {
  display: grid;
  position: absolute;
  inset: 0;
  gap: 1px;

  &__item {
    height: auto;
  }
}

@for $i from 10 through 100 {
  .screen--s--#{$i} {
    grid-template-columns: repeat($i, 1fr);
    grid-template-rows: repeat($i, 1fr);
  }
}

